[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Progress bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI components/Pokemon_info_box.gd" type="Script" id=2]

[node name="Pokemon_info_box" type="VBoxContainer"]
margin_right = 313.0
margin_bottom = 290.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 313.0
margin_bottom = 14.0
text = "POKEMON NAME"

[node name="Progress bar" parent="." instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 313.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 36.0
margin_right = 313.0
margin_bottom = 60.0

[node name="moreinfo" type="Button" parent="HBoxContainer"]
margin_right = 73.0
margin_bottom = 24.0
text = "More info"

[node name="select_pokemon" type="CheckBox" parent="HBoxContainer"]
margin_left = 77.0
margin_right = 208.0
margin_bottom = 24.0
text = "Select pokemon"
[connection signal="pressed" from="HBoxContainer/moreinfo" to="." method="_on_moreinfo_pressed"]
[connection signal="button_up" from="HBoxContainer/select_pokemon" to="." method="_on_select_pokemon_button_up"]
